[package]
name = "george"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive", "cargo"] }
env_logger = "0.10.0"
log = "0.4.20"
once_cell = "1.18.0"
path-absolutize = "3.1.1"
serde = { version = "1.0.189", features = ["derive"] }
serial_test = "2.0.0"
shellexpand = "3.1.0"
toml = "0.8.2"
walkdir = "2.4.0"
